--- a/client_code/Filter/form_template.yaml
+++ b/client_code/Filter/form_template.yaml
@@ -57,9 +57,14 @@ components:
     name: r
     layout_properties: {grid_position: 'JJCFHV,IQWZLZ'}
     event_bindings: {clicked: r_clicked}
+  - name: h0
+    properties: {text: '0', group_name: fix_range}
+    type: RadioButton
+    layout_properties: {}
+    event_bindings: {clicked: h0_clicked}
   - type: CheckBox
     properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', allow_indeterminate: false, visible: true, text: ALL rows, font_size: null,
+      foreground: '', allow_indeterminate: false, visible: true, text: ALL, font_size: null,
       font: '', spacing_above: small, spacing_below: small, italic: false, background: '',
       bold: false, checked: false, underline: false}
     name: all
