--- a/anvil.yaml
+++ b/anvil.yaml
@@ -4,12 +4,12 @@ services:
   client_config: {}
   server_config: {}
 startup: {type: form, module: Form1}
-package_name: M3_App_1
+package_name: MH
 allow_embedding: false
-name: M3 App 1
+name: MH
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
   server_spec: null}
-metadata: {logo_img: 'asset:kag1.jpg'}
+metadata: {logo_img: 'asset:kag1.jpg', title: MyHealth, description: BP Monitor & Analyzer}
 startup_form: null
 uplink_visible: true
 renamed: true
