--- a/client_code/Analysis/form_template.yaml
+++ b/client_code/Analysis/form_template.yaml
@@ -87,7 +87,7 @@ components:
         - {id: ZTCJOI, title: S2, data_key: '', $$hashKey: 'object:13402', width: ''}
         - {id: KUYNOT, title: D1, data_key: '', $$hashKey: 'object:14171', width: ''}
         - {id: FEIZWZ, title: D2, data_key: '', $$hashKey: 'object:14157'}
-        - {id: EAWJTH, title: P1, data_key: '', $$hashKey: 'object:14159', width: ''}
+        - {id: EAWJTH, title: P1, data_key: '', $$hashKey: 'object:14159'}
         - {id: QBWFPX, title: P2, data_key: '', $$hashKey: 'object:14161', width: ''}
         - {id: BCWXLU, title: M1, data_key: '', $$hashKey: 'object:14163', width: ''}
         - {id: VNTALA, title: M2, data_key: '', $$hashKey: 'object:14165', width: ''}
