--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -21,3 +21,4 @@ unique_ids:
     kag1.jpg: '167499787548447257344142.57965'
     standard-page.html: DBAA2DUXRY7VSWBLWK6HZTEPKTJ7LXBR
     theme.css: XKNRN4SFF34IMREX52NQWF2Y6VCAGYB7
+  scripts: {}
